# coursework

./: .env.example  .gitignore  README.md  pyproject.toml  user_setting.json
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_logger_py.html  z_145eef247bfb46b6_main_py.html  z_145eef247bfb46b6_reports_py.html  z_145eef247bfb46b6_services_py.html  z_145eef247bfb46b6_utils_py.html  z_145eef247bfb46b6_views_py.html
logs/: log_file.json  reports.json
src/: logger.py  main.py  reports.py  services.py  utils.py  views.py
tests/: test_file_operations.py  test_logger.py  test_main.py  test_reports.py  test_services.py  test_utils.py  test_views.py
